data/derived/sp14/progs/unify/prog3577.ml.out
Characters 94-100:
  let fixpoint (f,b) = wwhile (let helper = if ((f b) = b) then (f b,true) else (f b, false) in helper,b);;
                                                                                                ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
